updated to 0.3.5, added pip support, fixed major bugs, no more file dependency

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,38 @@
-*.png
-.ipynb_checkpoints/
-.cache/
-cover/
-*.pyc
-*.pytest_cache/
-/*.egg-info
-.coverage
 Archive/*
+
+_configtest.o.d
+cover/
+
+build
+dist/
+tags
+
+*.pyc
+*.png
+/*.egg-info
+*.so
+*.pyd
+*.c
+*.cpp
+*.sln
+*.pyproj
+*~
+*.pdf
+.#*
+*.lprof
+*.swp
+*.swo
+.DS_Store
+*.tar.gz
+*.tgz
+*.nt.bz2
+*.prof
+*.prefs
+.pydevproject
+.idea
+.vscode
+
+.coverage
+.ipynb_checkpoints/
+.pytest_cache/
+.cache/
