--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,10 @@
-name: bsm_test
+name: bsm
 channels: 
   - defaults
 dependencies:
-  - python=3.7
-  - numpy=1.16
-  - scipy=1.3
-  - matplotlib=3.1.1
-  - pandas=0.25
-  - numba=0.45
-  - pytest=5.1.2
+  - python>=3.6
+  - numpy>=1.11.0
+  - scipy>=1.3
+  - matplotlib>=3.1.1
+  - pandas>=0.25
+  - numba>=0.45
