--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,9 @@ channels:
 dependencies:
   - python>=3.6
   - numpy>=1.11.0
-  - scipy>=1.3
   - matplotlib>=3.1.1
   - pandas>=0.25
   - numba>=0.45
   - jupyter>=1.0
+  - tqdm
   
